force-app/main/default/objects/Camara__c/Camara__c.object-meta.xml
<CustomObject>
    <description>Representa una cámara de seguridad física en el plano de la casa.</description>
    <label>Camara</label>
    <nameField>
        <label>Camara Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camaras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>