force-app/main/default/objects/Camara__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apagar cámaras sin borrarlas</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>