force-app/main/default/objects/Camara__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <label>Contacto</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cámaras de Seguridad</relationshipLabel>
    <relationshipName>Camaras_Seguridad</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contacto propietario de la cámara de seguridad.</description>
</CustomField>