force-app/main/default/objects/Camara__c/fields/Posicion_X__c.field-meta.xml
<CustomField>
    <fullName>Posicion_X__c</fullName>
    <description>Coordenada X en porcentaje (0-100) para posicionar la cámara en el plano.</description>
    <label>Posición X</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>