force-app/main/default/objects/Camara__c/fields/Posicion_Y__c.field-meta.xml
<CustomField>
    <fullName>Posicion_Y__c</fullName>
    <description>Coordenada Y en porcentaje (0-100) para posicionar la cámara en el plano.</description>
    <label>Posición Y</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>