force-app/main/default/objects/Camara__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>https://www.youtube.com/watch?v=EvsLqQS_80E</description>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>