force-app/main/default/objects/Camara__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>Zona de la vivienda donde se encuentra instalada la cámara.</description>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salón</fullName>
            </value>
            <value>
                <fullName>Cocina</fullName>
            </value>
            <value>
                <fullName>Jardín</fullName>
            </value>
            <value>
                <fullName>Entrada</fullName>
            </value>
            <value>
                <fullName>Dormitorio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>