force-app/main/default/objects/Camara__c/validationRules/Coordenadas_Dentro_De_Limites.validationRule-meta.xml
<ValidationRule>
    <fullName>Coordenadas_Dentro_De_Limites</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Posicion_X__c &lt; 0,
  Posicion_X__c &gt; 100,
  Posicion_Y__c &lt; 0,
  Posicion_Y__c &gt; 100
)</errorConditionFormula>
    <errorMessage>Las coordenadas X e Y deben ser un porcentaje entre 0 y 100 para situarse dentro del mapa.</errorMessage>
</ValidationRule>